--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title></title>
+		<title>首页</title>
 	</head>
 	<body>
-		
+		<p>这是微信的首页内容</p>
 	</body>
 </html>
