微信朋友圈修改 by AdamCao

--- a/FriendState.html
+++ b/FriendState.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>微信朋友圈</title>
 	</head>
 	<body>
+	<p>这是微信朋友圈</p>
 	</body>
 </html>
